--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div>
-            <p>Hello, World!</p>
+            <p>Goodbye!</p>
         </div>
     </body>
 </html>
